Further attempt at adding a timeout
Further attempt at adding a timeout to gathering/mining and building.